--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <div id="background-div"></div>
-    <script src="script.js"></script>
+    <div id="table-div"></div>
+    <script src="second.js" defer></script>
+    <script src="script.js" defer></script>
 </body>
 </html>
