Added a third module file to grab the string meal name and added styling

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div id="background-div"></div>
     <div id="table-div"></div>
     <script src="second.js" defer></script>
+    <script src="third.js" defer></script>
     <script src="script.js" defer></script>
 </body>
 </html>
